--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -6,12 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
     />
   </head>
   <body>
-    <!-- CODE HERE -->
+    <nav class="navbar bg-light pe-5">
+      <div class="container container-fluid">
+        <a href="#"
+          ><img
+            src="./assets/bootstrap.png"
+            alt=""
+            width="40px"
+            height="40px"
+          />
+        </a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a href="#" class="nav-link active d-inline-block p-2 ps-4 text-primary">Home</a>
+            <a href="#" class="nav-link active d-inline-block p-2 text-primary">Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="list-group">
+      <li class="list-group-item ps-5">Item I</li>
+      <li class="list-group-item ps-5">Item II</li>
+      <li class="list-group-item ps-5">Item III</li>
+      <li class="list-group-item ps-5">Item IV</li>
+      <li class="list-group-item ps-5">Item V</li>
+    </ul>
+    <button type="button" class="btn btn-primary ms-5 mt-2">Primary</button>
+    <button type="button" class="btn btn-secondary mt-2">Secondary</button>
+    <button type="button" class="btn btn-success mt-2">Success</button>
+    <button type="button" class="btn btn-danger mt-2">Danger</button>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
