--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -18,17 +23,50 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
-
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
+    <div class="container bg-muted m-0">
+      <img src="./assets/images/logo.png" alt="" />
+    </div>
+    <div
+      class="mast"
+      style="background-image: url('./assets/images/flowershop.jpg')"
+    >
+      <div
+        class="overlay d-flex flex-column justify-content-center align-items-center"
+      >
+        <h1>Beautiful Flowers</h1>
+        <button class="btn btn-success">Learn More</button>
+      </div>
+    </div>
+    <div class="container-fluid mastfoot py-5">
+      <div class="row text-center">
+        <div class="col-sm-3 col-md-6 col-lg-3 py-2">
+          <img src="./assets/images/flower-icon.png" alt="">
+          <p>Flowers for every kind of situation</p>
+        </div>
+        <div class="col-sm-3 col-md-6 col-lg-3 py-2">
+          <img src="./assets/images/payment-icon.png" alt="">
+          <p>All major payments kinds accepted</p>
+        </div>
+        <div class="col-sm-3 col-md-6 col-lg-3 py-2">
+          <img src="./assets/images/phone-icon.png" alt="">
+          <p>Free consultation</p>
+        </div>
+        <div class="col-sm-3 col-md-6 col-lg-3 py-2">
+          <img src="./assets/images/truck-icon.png" alt="">
+          <p>City wide delivery</p>
+        </div>
+      </div>
+    </div>
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
