--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -5,13 +5,71 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
     />
+
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <!-- CODE HERE -->
+
+    <header>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="d-flex align-items-center justify-content-center">
+            <a href="#" class="navbar-brand col-sm">
+              <img
+                style="height: 50px"
+                src="/Exercise_A/assets/bootstrap.png"
+                alt="Bootstrap logo"
+                class="logo"
+              />
+            </a>
+            <ul
+              class="navbar-bar list-unstyled d-flex align-items-center justify-content-center"
+            >
+              <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Link</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <section>
+        <ul class="list-group">
+          <li class="list-group-item py-3">Item I</li>
+          <li class="list-group-item py-3">Item II</li>
+          <li class="list-group-item py-3">Item III</li>
+          <li class="list-group-item py-3">Item IV</li>
+          <li class="list-group-item py-3">Item V</li>
+        </ul>
+        <div class="row">
+          <button class="col-sm btn btn-primary me-1">Primary</button>
+          <button class="col-sm btn btn-secondary me-1">Secondary</button>
+          <button class="col-sm btn btn-success me-1">Success</button>
+          <button class="col-sm btn btn-danger me-1">Danger</button>
+        </div>
+      </section>
+    </header>
+
+    <!-- BOOTSTAP SCRIPT -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
