--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -5,8 +5,15 @@
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
 
     <!-- Google Font - Lato -->
     <link
@@ -18,17 +25,62 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
-
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
+    <header>
+      <img src="/Exercise_B/assets/images/logo.png" alt="logo" class="logo" />
+    </header>
+    <main>
+      <section class="section-intro">
+        <div class="intro-content">
+          <h1>Beautiful Flowers</h1>
+          <a href=""><button>Learn more</button></a>
+        </div>
+      </section>
+      <section class="section-services">
+        <div class="service-container row">
+          <div class="service col-sm-6 col-xl col-md-6">
+            <img
+              src="/Exercise_B/assets/images/flower-icon.png"
+              alt="flower icon"
+              class="icon"
+            />
+            <p>Flowers for every kind of situation</p>
+          </div>
+          <div class="service col-sm-6 col-xl col-md-6">
+            <img
+              src="/Exercise_B/assets/images/payment-icon.png"
+              alt="payment icon"
+              class="icon"
+            />
+            <p>All mayor payments kinds accepter</p>
+          </div>
+          <div class="service col-sm-6 col-xl col-md-6">
+            <img
+              src="/Exercise_B/assets/images/phone-icon.png"
+              alt="phone icon"
+              class="icon"
+            />
+            <p>Free consultation</p>
+          </div>
+          <div class="service col-sm-6 col-xl col-md-6">
+            <img
+              src="/Exercise_B/assets/images/truck-icon.png"
+              alt="truck icon"
+              class="icon"
+            />
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+      integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
