--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -1,17 +1,40 @@
 <!-- Do not forget to add in the Bootstrap CDN's so that you can utilise the pre-constructed HTML elements -->
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
-  </head>
-  <body>
-    <!-- CODE HERE -->
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title></title>
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous" />
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg mx-5 navbar-light bg-light gap-2">
+			<a class="navbar-brand" href="#">
+				<img
+					src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"
+					width="30"
+					height="30"
+					alt="" />
+			</a>
+			<a>Home</a>
+			<a>Link</a>
+		</nav>
+		<ul class="list-group">
+			<li class="list-group-item">Item I</li>
+			<li class="list-group-item">Item II</li>
+			<li class="list-group-item">Item III</li>
+			<li class="list-group-item">Item IV</li>
+			<li class="list-group-item">Item V</li>
+		</ul>
+		<button type="button" class="btn btn-primary">Primary</button>
+		<button type="button" class="btn btn-secondary">Secondary</button>
+		<button type="button" class="btn btn-success">Success</button>
+		<button type="button" class="btn btn-danger">Danger</button>
+	</body>
 </html>
