--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,42 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
-    <!-- Link and CDN required for bootstrap -->
-
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
-
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
-
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+<!doctype html>
+<html class="no-js">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title></title>
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="./assets/style/stylesheet.css" />
+	</head>
+	<body>
+		<nav>
+			<img src="./assets/images/logo.png" alt="" />
+		</nav>
+		<main>
+			<img class="backgroundimage" src="./assets/images/flowershop.jpg" />
+			<div class="center">
+				<h1>Beautiful Flowers</h1>
+				<button>Learn more</button>
+			</div>
+		</main>
+		<div class="services">
+			<div class="service">
+				<img class="icon" src="./assets/images/flower-icon.png" alt="" />
+				<p class="text">Flowers for every kind of situation.</p>
+			</div>
+			<div class="service">
+				<img class="icon" src="./assets/images/payment-icon.png" alt="" />
+				<p class="text">All major payment kinds accepted.</p>
+			</div>
+			<div class="service">
+				<img class="icon" src="./assets/images/phone-icon.png" alt="" />
+				<p class="text">Free consulation.</p>
+			</div>
+			<div class="service">
+				<img class="icon" src="./assets/images/truck-icon.png" alt="" />
+				<p class="text">City wide delivery.</p>
+			</div>
+		</div>
+		<script src="" async defer></script>
+	</body>
 </html>
